--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Postman RPSLS Game</title>
+    <title>Postman Game</title>
     <style>
       textarea {
         resize: none;
@@ -53,9 +53,11 @@
 
     <script>
       var socket = io();
+      var initText = 'Hi. Welcome to Postman Game! \nYou are now connected to Basement. \nUse the following commands to get started: \n/nick <name> to change your name (recommended) \n/join <room_name> to create or change your room \n/help to display this message again\n'
 
-      $(function() {
+      $(document).ready(function() {
         $("#message").focus();
+        $('#content').val(initText);
       });
 
       socket.on('connect', function() {
@@ -76,6 +78,13 @@
           $('#content').val(newNameContent);
         } else if (textContent.startsWith("/join")) {
           socket.emit('join_room', textContent.split(" ")[1]);
+        } else if (textContent.startsWith("/help")) {
+          if ($('#content').val() == "") {
+            var newContent = initText;
+          } else {
+            var newContent = $('#content').val() + "\n\n" + initText;
+          }
+          $('#content').val(newContent);
         } else {
           socket.emit('chat_message', textContent);
         }
