--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
           $('#content').val(newNameContent);
         } else if (textContent.startsWith("/join")) {
           socket.emit('join_room', textContent.split(" ")[1]);
-        } else if (textContent.startsWith("/join")) {
-          socket.emit('start_game'), textContent.split(" ")[1]);
+        } else if (textContent.startsWith("/start")) {
+          socket.emit('start_game', textContent.split(" ")[1]);
         } else if (textContent.startsWith("/play")) {
-          socket.emit('play_game'), textContent.split(" ")[1]);
+          socket.emit('play_game', textContent.split(" ")[1]);
         } else if (textContent.startsWith("/help")) {
           if ($('#content').val() == "") {
             var newContent = initText;
